[package]
name = "pingu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
format-bytes = "0.3.0"
futures = "0.3.30"
http = "1.0.0"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
