[package]
name = "pingu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
format-bytes = "0.3.0"
futures = "0.3.30"
http = "1.0.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }

[features]
default = []
tracing = ["dep:tracing"]
